# primer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  install.sh  recipe-spec.md  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
adapters/_shared/: build.md  check.md  explain.md  next-milestone.md  state-model.md  status.md  track.md  verify.md
docs/: 5-minute-primer.md  community-recipes.md
pkg/homebrew/: primer.rb
pkg/npm/: README.md  package.json
pkg/npm/scripts/: install.js
recipes/cli-tool/: README.md  recipe.yaml
recipes/cli-tool/milestones/01-bootstrap/: agent.md  demo.sh  explanation.md  spec.md
recipes/cli-tool/milestones/02-complete/: agent.md  demo.sh  explanation.md  spec.md
recipes/cli-tool/milestones/03-edit-remove/: agent.md  demo.sh  explanation.md  spec.md
recipes/cli-tool/milestones/04-filters-tests/: agent.md  (+3 more)
recipes/interpreter-mini/: README.md  recipe.yaml
recipes/operating-system/: README.md  recipe.yaml
scripts/: adapter_context.py  generate-claude-adapter.py  generate-codex-adapter.py  validate-recipe-yaml.py
src/: adapter.rs  cli.rs  intent.rs  main.rs  paths.rs  recipe.rs  retry_guidance.rs  state.rs  ui.rs  validation.rs  verification_history.rs  workflow.rs  workspace.rs  workstream.rs
src/commands/: build.rs  check.rs  doctor.rs  explain.rs  init.rs  list.rs  milestone.rs  mod.rs  next_milestone.rs  recipe.rs  status.rs  track.rs  verify.rs  workstream.rs
tests/: bundled_cli.rs  cli_workflow.rs  milestone_lint_cli.rs  recipe_lint_cli.rs  workstream_cli.rs
tests/claude-adapter/: test_generate_claude_adapter.py
tests/codex-adapter/: test_generate_codex_adapter.py
tests/recipe-validation/: test_recipe_validation.py
(+70 files in other folders)
