[package]
name = "primer"
version = "0.2.0"
edition = "2024"
authors = ["Armen Gabrielyan"]
description = "Primer CLI for AI-guided project recipes and milestone workflows"
license = "MIT"
readme = "README.md"
keywords = ["cli", "ai", "learning", "recipes", "agents"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "/build.rs",
    "src/**",
    "recipes/**",
    "adapters/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
clap_complete = "4"
comfy-table = "7.2"
console = "0.16"
indicatif = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
termimad = "0.31"
which = "8.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
